--- a/templates/front/entry/form/_form.html.twig
+++ b/templates/front/entry/form/_form.html.twig
@@ -10,5 +10,6 @@
     </div>
 </div>
 
-<input class="btn btn-primary" type="submit" name="submit">{{ button_label|default('Save') }}</input>
+<button class="btn btn-primary" type="submit" name="submit"><i
+            class="far fa-save"></i> {{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
