--- a/templates/front/month/_cell_day_data.html.twig
+++ b/templates/front/month/_cell_day_data.html.twig
@@ -1,5 +1,5 @@
 <td>
-    <a href="{{ generateRouteDayView(day.day) }}" class="float-right">
+    <a href="{{ grrGenerateRouteDayView(day.day) }}" class="float-right">
         {{ day.day }}
     </a>
 
