--- a/templates/front/navigation/month/_cell_day.html.twig
+++ b/templates/front/navigation/month/_cell_day.html.twig
@@ -6,6 +6,6 @@
 
 <td class="{{ classDay }}">
     {% if day.isSameMonth(firstDay) %}
-        <a href="{{ generateRouteDayView(day.day) }}">{{ day.day }}</a>
+        <a href="{{ grrGenerateRouteDayView(day.day) }}">{{ day.day }}</a>
     {% endif %}
 </td>
