--- a/templates/front/navigation/month/_cell_week.html.twig
+++ b/templates/front/navigation/month/_cell_week.html.twig
@@ -1,5 +1,5 @@
 <td class="text-muted">
-    <a href="{{ generateRouteWeekView(numericWeek) }}">
+    <a href="{{ grrGenerateRouteWeekView(numericWeek) }}">
         <span class="text-muted">{{ 'week.initial'|trans({},'actions') }}{{ numericWeek }}</span>
     </a>
 </td>
