--- a/templates/front/navigation/month/_month_by_days.html.twig
+++ b/templates/front/navigation/month/_month_by_days.html.twig
@@ -2,7 +2,7 @@
     <thead>
     <tr>
         <th scope="col" class="text-center" colspan="8">
-            <a href="{{ generateRouteMonthView() }}">
+            <a href="{{ grrGenerateRouteMonthView() }}">
                 {{ firstDay.monthName|upper }} {{ firstDay.year }}
             </a>
         </th>
