--- a/templates/repeat/_detail.html.twig
+++ b/templates/repeat/_detail.html.twig
@@ -25,11 +25,11 @@
             </tr>
             <tr>
                 <th>RepOpt</th>
-                <td>{{ repeat.repOpt|joursSemaine }}</td>
+                <td>{{ repeat.repOpt|grrJoursSemaine }}</td>
             </tr>
             <tr>
                 <th>RoomId</th>
-                <td>{{ repeat.roomId | room_getName }}</td>
+                <td></td>
             </tr>
             <tr>
                 <th>Timestamp</th>
@@ -49,7 +49,7 @@
             <tbody>
             <tr>
                 <th>RepType</th>
-                <td>{{ repeat.repType | periodiciteName }}</td>
+                <td>{{ repeat.repType | grrPeriodiciteName }}</td>
             </tr>
             <tr>
                 <th>CreateBy</th>
