--- a/templates/front/navigation/month/_button_next.html.twig
+++ b/templates/front/navigation/month/_button_next.html.twig
@@ -1,3 +1,3 @@
-<a href="{{ generateRouteMonthView(nextMonth.year, nextMonth.month) }}" title="{{ 'next'|trans({},'actions') }}">
+<a href="{{ grrGenerateRouteMonthView(nextMonth.year, nextMonth.month) }}" title="{{ 'next'|trans({},'actions') }}">
     <i class="fas fa-arrow-right"></i>
 </a>
