--- a/templates/ajax/_rooms_options.html.twig
+++ b/templates/ajax/_rooms_options.html.twig
@@ -1,4 +1,4 @@
-<option value="">{{ 'menu.select.room' | trans }}</option>
+<option value="">{{ 'entry.form.room.select.placeholder' | trans }}</option>
 {% for room in rooms %}
-<option value="{{ room.id }}">{{ room.name }}</option>
+    <option value="{{ room.id }}">{{ room.name }}</option>
 {% endfor %}
