--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,8 +1,8 @@
 {% extends '@grr_front/layout_front.html.twig' %}
 
-{% block title %}GrrArea index{% endblock %}
+{% block title %}{{'page.welcome'|trans}}{% endblock %}
 
 {% block body %}
-    <h3>Grr</h3>
-
+    <h3>Bienvenue</h3>
+    <img src="{{ asset('totem_grr.png') }}" alt="grr">
 {% endblock %}
