--- a/templates/front/entry/show.html.twig
+++ b/templates/front/entry/show.html.twig
@@ -11,11 +11,11 @@
         <tbody>
         <tr>
             <th>{{ 'entry.form.startTime.label'|trans }}</th>
-            <td>{{ entry.startTime|date('m-d-Y H:i:s') }}</td>
+            <td>{{ entry.startTime|date('d-m-Y H:i:s') }}</td>
         </tr>
         <tr>
             <th>{{ 'entry.form.endTime.label'|trans }}</th>
-            <td>{{ entry.endTime |date('m-d-Y H:i:s') }}</td>
+            <td>{{ entry.endTime |date('d-m-Y H:i:s') }}</td>
         </tr>
         <tr>
             <th>{{ 'entry.form.area.label'|trans }}</th>
