--- a/templates/admin/area/show.html.twig
+++ b/templates/admin/area/show.html.twig
@@ -51,7 +51,7 @@
                 </tr>
                 <tr>
                     <th>{{ 'area.form.enablePeriods.label'|trans }}</th>
-                    <td>{{ area.enablePeriods | grrPeriodName }}</td>
+                    <td>{{ area.enablePeriods }}</td>
                 </tr>
                 </tbody>
             </table>
