--- a/templates/front/entry/edit.html.twig
+++ b/templates/front/entry/edit.html.twig
@@ -14,4 +14,5 @@
 {% endblock %}
 {% block scripts %}
     {% include '@grr_front/entry/form/_rooms_list_ajax.html.twig' %}
+    {% include '@grr_front/entry/form/_select_days_ajax.html.twig' %}
 {% endblock %}
