--- a/templates/front/navigation/_top_navigation.html.twig
+++ b/templates/front/navigation/_top_navigation.html.twig
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-2">
-        {{ grrMenuNavigation() }}
+        {{ grrMenuNavigationRender() }}
     </div>
     <div class="col-5">
-        {{ grrMonthNavigation() }}
+        {{ grrMonthNavigationRender() }}
     </div>
     <div class="col-5">
 
