--- a/templates/admin/_menu_admin.html.twig
+++ b/templates/admin/_menu_admin.html.twig
@@ -1,5 +1,5 @@
 <li class="nav-item active">
-    <a class="nav-link" href="{{ path('grr_front_home') }}">{{ 'menu.home'|trans({}, 'actions') }} <span class="sr-only">(current)</span></a>
+    <a class="nav-link" href="{{ path('grr_front_home') }}">{{ 'menu.planning'|trans({}, 'actions') }} <span class="sr-only">(current)</span></a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{{ path('grr_admin_area_index') }}">{{ 'menu.area'|trans({}, 'actions') }}</a>
