--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
 <body>
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top border-bottom shadow-sm">
     {% block brand %}
-        <a class="navbar-brand" href="{{ path('grr_front_home') }}">Grr</a>
+        <a class="navbar-brand" href="{{ path('grr_home') }}">Grr</a>
     {% endblock %}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsleDefault"
             aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
