--- a/templates/front/entry/new.html.twig
+++ b/templates/front/entry/new.html.twig
@@ -5,13 +5,13 @@
 {% block body %}
     <h1>{{ 'entry.new.title'|trans({},'actions') }}</h1>
 
-    {%   include('@grr_front/entry/form/_form.html.twig') %}
+    {% include('@grr_front/entry/form/_form.html.twig') %}
 
     <br/>
     <a href="{{ path('grr_front_entry_index') }}"><i
                 class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({}, 'actions') }}</a>
 {% endblock %}
 {% block scripts %}
+    <script src="{{ asset('js/display_select_days.js') }}"></script>
     {% include '@grr_front/entry/form/_rooms_list_ajax.html.twig' %}
-    {% include '@grr_front/entry/form/_select_days_ajax.html.twig' %}
 {% endblock %}
