--- a/templates/front/entry/form/_form_periodicity.html.twig
+++ b/templates/front/entry/form/_form_periodicity.html.twig
@@ -1,5 +1,22 @@
 <h3>{{ 'entry.new.periodicity.title'|trans({},'actions') }}</h3>
 <hr/>
 
-To do
-{{ form(form_periodicity) }}
+{{ form_start(form_periodicity) }}
+{{ form_errors(form_periodicity) }}
+{{ form_row(form_periodicity.type) }}
+{{ form_row(form_periodicity.end_periodicity) }}
+<div id="weeks_options" class="d-none">
+    <table class="table table-bordered">
+        <tbody>
+        <tr>
+            <td>
+                {{ form_row(form_periodicity.days.days) }}
+            </td>
+            <td>
+                {{ form_row(form_periodicity.days.weeks) }}
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+{{ form_end(form_periodicity) }}
