--- a/templates/front/entry/form/_form_periodicity.html.twig
+++ b/templates/front/entry/form/_form_periodicity.html.twig
@@ -3,15 +3,15 @@
 
 {{ form_row(form.periodicity.type) }}
 {{ form_row(form.periodicity.end_time) }}
-<div id="weeks_options" class="d-none">
+<div id="weeks_options" class="d-no2ne">
     <table class="table table-bordered">
         <tbody>
         <tr>
             <td>
-                {{ form_row(form.periodicity.weeks.days) }}
+                {{ form_row(form.periodicity.days) }}
             </td>
             <td>
-                {{ form_row(form.periodicity.weeks.repeat_week) }}
+                {{ form_row(form.periodicity.repeat_week) }}
             </td>
         </tr>
         </tbody>
