--- a/templates/front/layout_front.html.twig
+++ b/templates/front/layout_front.html.twig
@@ -8,3 +8,7 @@
 {% block menu_top %}
     {% include '@grr_front/_menu_front.html.twig' %}
 {% endblock %}
+
+{% block navigation %}
+    {% include '@grr_front/navigation/_top_navigation.html.twig' %}
+{% endblock %}
