--- a/templates/front/navigation/_top_navigation.html.twig
+++ b/templates/front/navigation/_top_navigation.html.twig
@@ -1,4 +1,5 @@
-<div class="row">
+<header class="row">
+
     <div class="col-2">
         {{ grrMenuNavigationRender() }}
     </div>
@@ -8,4 +9,5 @@
     <div class="col-5">
 
     </div>
-</div>
+
+</header>
