add navigation links

--- a/templates/front/navigation/month/_button_next.html.twig
+++ b/templates/front/navigation/month/_button_next.html.twig
@@ -1,3 +1,6 @@
-<a href="{{ grrGenerateRouteMonthView(nextMonth.year, nextMonth.month) }}" title="{{ 'next'|trans({},'actions') }}">
+<a href="{{ grrGenerateRouteMonthView(month.year, month.nextMonth.month) }}" title="{{ 'next.month'|trans({},'actions') }}">
     <i class="fas fa-arrow-right"></i>
+</a>
+<a href="{{ grrGenerateRouteMonthView(month.nextYear.year, month.month) }}" title="{{ 'next.year'|trans({},'actions') }}">
+    <i class="fas fa-forward"></i>
 </a>
