--- a/templates/front/navigation/month/_month_by_weeks.html.twig
+++ b/templates/front/navigation/month/_month_by_weeks.html.twig
@@ -5,6 +5,10 @@
             <a href="{{ grrGenerateRouteMonthView() }}">
                 {{ firstDay.monthName|upper }} {{ firstDay.year }}
             </a>
+            <hr>
+            <a href="{{ grrGenerateRouteDayView(today.day) }}">
+                {{ 'Today' | trans}}
+            </a>
         </th>
     </tr>
     <tr>
