--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,14 +33,22 @@
             {% block menu_top %}
             {% endblock %}
         </ul>
-        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            <ul class="navbar-nav">
+        <ul class="navbar-nav">
+            {% block menu_user %}
+                {% include '_menu_user.html.twig' %}
+            {% endblock %}
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                 <li class="nav-item">
-                    <a href="{{ path('app_logout') }}" class="nav-link" title="Déconnexion"><i
+                    <a href="{{ path('app_logout') }}" class="nav-link" title="{{ 'menu.user.logout'|trans }}"><i
                                 class="fas fa-sign-out-alt"></i></a>
                 </li>
-            </ul>
-        {% endif %}
+            {% else %}
+                <li class="nav-item">
+                    <a href="{{ path('app_login') }}" class="nav-link" title="{{ 'menu.user.login'|trans }}"><i
+                                class="fas fa-sign-in-alt"></i></a>
+                </li>
+            {% endif %}
+        </ul>
     </div>
 </nav>
 
