--- a/templates/user/edit_password.html.twig
+++ b/templates/user/edit_password.html.twig
@@ -1,9 +1,9 @@
-{% extends 'layout_front.html.twig' %}
+{% extends '@grr_front/layout_front.html.twig' %}
 
-{% block title %}{{ 'user.new.title'|trans({},'actions') }}{% endblock %}
+{% block title %}{{ 'user.password.title'|trans({},'actions') }}{% endblock %}
 
 {% block body %}
-    <h1>{{ user.login }}</h1>
+    <h1>{{ user.email }}</h1>
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
