menu select casi ok

--- a/templates/front/navigation/form/_menu_select.js.html.twig
+++ b/templates/front/navigation/form/_menu_select.js.html.twig
@@ -1,55 +1,13 @@
+{% set currentArea = app.request.get('area') %}
+{% set currentRoom = app.request.get('room') %}
+
 <script type="text/javascript">
-    /**
-     * Met ajour la liste des rooms
-     */
-    {#  $(document).ready(function () {
-          var $locationSelect = $('#area_menu_select_area');
-          var $specificLocationTarget = $('#area_menu_select_room');
-
-          $locationSelect.on('change', function (e) {
-              console.log("coucou");
-              $.ajax({
-                  url: '{{ path('grr_ajax_getrooms') }}',
-                data: {
-                    id: $locationSelect.val()
-                },
-                success: function (html) {
-                    if (!html) {
-                        $specificLocationTarget.find('select').remove();
-                        $specificLocationTarget.addClass('d-none');
-
-                        return;
-                    }
-
-                    // Replace the current field and show
-                    $specificLocationTarget
-                        .html(html)
-                        .removeClass('d-none')
-                }
-            });
-        });
-    });#}
-
-    $(function () {
-        $('#area_menu_select_room').on('change', function () {
-            var roomId = $(this).val();
-            var areaId = $("#area_menu_select_area").val();
-            var url = '{{ grrGenerateRouteMonthView() }}';
-            console.log(url);
-            url = url.replace("roomid", roomId);
-            url = url.replace("areaid", areaId);
-            if (url) {
-                window.location = url;
-            }
-            return false;
-        });
-    });
 
     $(function () {
         $('#area_menu_select_area').on('change', function () {
             var areaId = $(this).val();
-            var url = '{{ grrGenerateRouteMonthView() }}';
-            url = url.replace("areaid", areaId);
+            var url = '{{ app.request.requestUri }}';
+            url = url.replace('/area/{{ currentArea.id }}', '/area/' + areaId);
             if (url) {
                 window.location = url;
             }
@@ -57,5 +15,22 @@
         });
     });
 
+    $(function () {
+        $('#area_menu_select_room').on('change', function () {
+            var roomId = $(this).val();
+            var url = '{{ app.request.requestUri }}';
+
+            {% if currentRoom %}
+            url = url.replace('/room/{{ currentRoom.id }}', '/room/' + roomId);
+            {% else %}
+            url = url + '/' + roomId;
+            {% endif %}
+
+            if (url) {
+                window.location = url;
+            }
+            return false;
+        });
+    });
 
 </script>
