--- a/templates/admin/layout_admin.html.twig
+++ b/templates/admin/layout_admin.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block brand %}
-    <a class="navbar-brand" href="{{ path('grr_front_home') }}" title="Accueil">
+    <a class="navbar-brand" href="{{ path('grr_home') }}" title="Accueil">
         <i class="fas fa-home"></i> Grr </a>
 {% endblock %}
 
