--- a/templates/front/_menu_front.html.twig
+++ b/templates/front/_menu_front.html.twig
@@ -1,5 +1,5 @@
 <li class="nav-item active">
-    <a class="nav-link" href="{{ path('grr_front_home') }}">{{ 'menu.home'|trans({}, 'actions') }} <span class="sr-only">(current)</span></a>
+    <a class="nav-link" href="{{ path('grr_home') }}">{{ 'menu.home'|trans({}, 'actions') }} <span class="sr-only">(current)</span></a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{{ path('grr_front_entry_index') }}">{{ 'menu.entries'|trans({}, 'actions') }}</a>
