--- a/templates/admin/area/show.html.twig
+++ b/templates/admin/area/show.html.twig
@@ -16,7 +16,7 @@
                     <th>
                         {{ 'area.form.access.label'|trans }}
                     </th>
-                    <td>{{ area.access }}</td>
+                    <td>{{ area.isPrivate }}</td>
                 </tr>
                 <tr>
                     <th>{{ 'area.form.orderDisplay.label'|trans }}</th>
@@ -24,34 +24,30 @@
                 </tr>
                 <tr>
                     <th>{{ 'area.form.weekstartsArea.label'|trans }}</th>
-                    <td>{{ area.weekstartsArea | grrJoursSemaine }}</td>
+                    <td>{{ area.weekStart | grrJoursSemaine }}</td>
                 </tr>
                 <tr>
                     <th>{{ 'area.form.morningstartsArea.label'|trans }}</th>
-                    <td>{{ area.morningstartsArea }}</td>
+                    <td>{{ area.startTime }}</td>
                 </tr>
                 <tr>
                     <th>{{ 'area.form.eveningendsArea.label'|trans }}</th>
-                    <td>{{ area.eveningendsArea }}</td>
+                    <td>{{ area.endTime }}</td>
                 </tr>
                 <tr>
                     <th>
                         {{ 'area.form.resolutionArea.label'|trans }}<br/>
                         <span class="text-muted">{{ 'area.form.resolutionArea.help'|trans }}</span>
                     </th>
-                    <td>{{ area.resolutionArea }}</td>
+                    <td>{{ area.durationTimeSlot }}</td>
                 </tr>
                 <tr>
                     <th>{{ 'area.form.eveningendsMinutesArea.label'|trans }}</th>
-                    <td>{{ area.eveningendsMinutesArea }}</td>
+                    <td>{{ area.minutesToAddToEndTime }}</td>
                 </tr>
                 <tr>
                     <th>{{ 'area.form.twentyfourhourFormatArea.label'|trans }}</th>
-                    <td>{{ area.twentyfourhourFormatArea | grrHourFormat }}</td>
-                </tr>
-                <tr>
-                    <th>{{ 'area.form.enablePeriods.label'|trans }}</th>
-                    <td>{{ area.enablePeriods }}</td>
+                    <td>{{ area.is24HourFormat | grrHourFormat }}</td>
                 </tr>
                 </tbody>
             </table>
@@ -62,7 +58,7 @@
                 <tr>
                     <th>{{ 'area.form.displayDays.label'|trans }}</th>
                     <td>
-                        {% for jour in  area.displayDays %}
+                        {% for jour in  area.daysOfWeekToDisplay %}
                             {{ jour | grrJoursSemaine }},
                         {% endfor %}
                     </td>
@@ -73,14 +69,14 @@
                         {{ 'area.form.dureeMaxResaArea.label'|trans }}<br/>
                         <span class="text-muted">{{ 'area.form.dureeMaxResaArea.help'|trans }}</span>
                     </th>
-                    <td>{{ area.dureeMaxResaArea }}</td>
+                    <td>{{ area.durationMaximumEntry }}</td>
                 </tr>
                 <tr>
                     <th>
                         {{ 'area.form.dureeParDefautReservationArea.label'|trans }}<br/>
                         <span class="text-muted">{{ 'area.form.dureeParDefautReservationArea.help'|trans }}</span>
                     </th>
-                    <td>{{ area.dureeParDefautReservationArea }}</td>
+                    <td>{{ area.durationDefaultEntry }}</td>
                 </tr>
                 <tr>
                     <th>
@@ -88,21 +84,6 @@
                         <span class="text-muted">{{ 'area.form.maxBooking.help'|trans }}</span>
                     </th>
                     <td>{{ area.maxBooking }}</td>
-                </tr>
-                <tr>
-                    <th>
-                        {{ 'area.form.ipAdr.label'|trans }}<br/>
-                        <span class="text-muted">{{ 'area.form.ipAdr.help'|trans }}</span>
-                    </th>
-                    <td>{{ area.ipAdr }}</td>
-                </tr>
-                <tr>
-                    <th>{{ 'area.form.calendardefaultvalues.label'|trans }}</th>
-                    <td>{{ area.calendarDefaultValues }}</td>
-                </tr>
-                <tr>
-                    <th>{{ 'area.form.idTypeParDefaut.label'|trans }}</th>
-                    <td>{{ area.idTypeParDefaut }}</td>
                 </tr>
                 </tbody>
             </table>
