--- a/templates/admin/room/_form.html.twig
+++ b/templates/admin/room/_form.html.twig
@@ -35,7 +35,7 @@
 
 <div class="row">
     <div class="col-6">
-        {{ form_row(form.maxBooking) }}
+        {{ form_row(form.maximumBooking) }}
     </div>
     <div class="col-6">
         {{ form_row(form.delaisMaxResaRoom) }}
