--- a/templates/admin/room/show.html.twig
+++ b/templates/admin/room/show.html.twig
@@ -25,7 +25,7 @@
                 {{ 'room.form.maxBooking.label'|trans }}<br/>
                 <span class="text-muted">{{ 'room.form.maxBooking.help'|trans }}</span>
             </th>
-            <td>{{ room.maxBooking }}</td>
+            <td>{{ room.maximumBooking }}</td>
         </tr>
         <tr>
             <th>
