--- a/templates/admin/utilisateurs/new.html.twig
+++ b/templates/admin/utilisateurs/new.html.twig
@@ -10,3 +10,6 @@
     <br />
     <a href="{{ path('grr_admin_user_index') }}"><i class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({},'actions') }}</a>
 {% endblock %}
+{% block scripts %}
+    {% include 'user/_select_room_js.html.twig' %}
+{% endblock %}
